--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "node-fetch": "^3.2.6"
